# RKModelCMPI

./: CMakeLists.txt  basis.cpp  basis.h  complexNumber.cpp  complexNumber.h  main.cpp  tdSch.cpp  tdSch.h
modules/: atomicUnit.cpp  atomicUnit.h
